serpentine/src/snek/snapshots/serpentine__snek__tests__argument_mismatch_builtin.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::argument_count

  x Expected 2 arguments got 1
   ,-[<redacted-path>:1:18]
 1 | export DEFAULT = Exec("echo hello");
   :                  ^^^^^^^^|^^^^^^^^
   :                          `-- This node expects 2 arguments
   `----
  help: Remember that chaining counts as a argument, `... > Foo(1, 2)` has 3 arguments passed for example.
