serpentine/src/snek/snapshots/serpentine__snek__tests__argument_mismatch_custom.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::argument_count

  x Expected 1 arguments got 0
   ,-[<redacted-path>:5:18]
 4 | 
 5 | export DEFAULT = Foo();
   :                  ^|^
   :                   `-- This node expects 1 arguments
   `----
  help: Remember that chaining counts as a argument, `... > Foo(1, 2)` has 3 arguments passed for example.
