serpentine/src/snek/snapshots/serpentine__snek__tests__default_not_export.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::item_not_found

  x 'DEFAULT' not found in scope
   ,-[<cli>:1:1]
 1 | DEFAULT
   : ^^^|^^^
   :    `-- Item with this name not found
   `----
  help: Serpentine cannot reference items (including functions) before they are defined.
