serpentine/src/snek/snapshots/serpentine__snek__tests__default_not_label.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::wrong_item_kind

  x Expected a label
   ,-[<cli>:1:1]
 1 | DEFAULT
   : ^^^|^^^
   :    `-- This is a 'function'
   `----
