serpentine/src/snek/snapshots/serpentine__snek__tests__double_return.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::double_return

  x Multiple returns
   ,-[<redacted-path>:3:5]
 2 |     return value > Exec("hello");
 3 |     return value > Exec("hello");
   :     ^^^|^^
   :        `-- Second return after existing return.
 4 | }
   `----
