serpentine/src/snek/snapshots/serpentine__snek__tests__error_in_import.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
  x Importing module '<redacted-path>' failed
  `-> compiler::double_return
      
        x Multiple returns
         ,-[<redacted-path>:3:5]
       2 |     return value > Exec("hello");
       3 |     return value > Exec("hello");
         :     ^^^|^^
         :        `-- Second return after existing return.
       4 | }
         `----
      
   ,-[<redacted-path>:1:8]
 1 | import "./double_return.snek" as lib;
   :        ^^^^^^^^^^^|^^^^^^^^^^
   :                   `-- In this import statement
 2 | 
   `----
