serpentine/src/snek/snapshots/serpentine__snek__tests__export_import_in_function.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
  x Importing module '<redacted-path>' failed
  |-> file_error
  |   
  |     x Could not read file <redacted-path>
  |   
  `-> OS error <redacted>
   ,-[<redacted-path>:2:19]
 1 | def Foo() {
 2 |     export import "../lib.snek" as lib;
   :                   ^^^^^^|^^^^^^
   :                         `-- In this import statement
 3 |     return Image("rust:latest");
   `----
